# cidr-list-benchmark

./: Cargo.toml
benches/: cidr_check.rs  example.rs
