[package]
name = "cidr-list-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
divan = "=0.1.1"
ipnetwork = "=0.20.0"
rand = "=0.8.5"

[[bench]]
name = "cidr_check"
harness = false
