[package]
name = "cidr-list-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cidr = "=0.2.2"
divan = "=0.1.1"
ipnetwork = "=0.20.0"
ip_network = "=0.4.1"
rand = "=0.8.5"

[[bench]]
name = "cidr_check"
harness = false
